{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "6b23f2f4-3906-4a6a-9830-9b7de91fd40b",
            "actions": [
                {
                    "name": "Mouse Position",
                    "type": "Value",
                    "id": "e21e5e2c-606b-442a-a349-f2cb77d6533b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LMB",
                    "type": "Button",
                    "id": "b6a3232a-82e5-462f-acd3-90ae321adc2f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RMB",
                    "type": "Button",
                    "id": "44f3aacc-d47d-4f08-8b72-c0e868179fac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "2556b460-47a1-4b47-98c1-fe41babf37b7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SouthWest",
                    "type": "Button",
                    "id": "b25cb2db-62d0-4f6b-bddc-1a0acec8d60d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "South",
                    "type": "Button",
                    "id": "e41bedca-47dc-48a9-87eb-1017b53c3633",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SouthEast",
                    "type": "Button",
                    "id": "b927b34d-d351-4b58-bc8e-ee17343bf52f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "West",
                    "type": "Button",
                    "id": "82a3b30e-b821-4886-8640-e06e92062938",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Wait",
                    "type": "Button",
                    "id": "c2970315-bc75-4a8a-b050-2d97c0b6a5a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "East",
                    "type": "Button",
                    "id": "a94f1c0c-9c2d-46de-bdc0-dbf6009e9444",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NorthWest",
                    "type": "Button",
                    "id": "8324fe58-7d5b-442c-b3e1-6b3fe679b636",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "North",
                    "type": "Button",
                    "id": "79987094-63eb-4afd-947c-66fe51a4b344",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NorthEast",
                    "type": "Button",
                    "id": "7cd176d6-39d4-4edc-b4ef-56b6c3b4bbb9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "e0a49347-eb0a-4b81-bf29-83adaf33b26e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "b21736f9-3fe9-4323-9e17-3cc08877a35a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cell",
                    "type": "Button",
                    "id": "d497aae5-75e0-4c7b-af87-460ed58c36b8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Control",
                    "type": "Button",
                    "id": "f1d43096-96d3-41cc-b5b7-39ba31fb68c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Tab",
                    "type": "Button",
                    "id": "64349435-a1a1-4306-a6a6-3eedff041344",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Get",
                    "type": "Button",
                    "id": "a784cfc9-2a9f-4cea-855a-48cac263f4b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "407132b1-5aee-4a06-8503-0c48b86c9892",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce32d47e-8e10-4b26-9101-3db3986cc01f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LMB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e9b58f2-3abc-4ccb-b5b9-f39034a3161e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RMB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62f790c1-1490-484d-b87b-bd7047d76f31",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f953991a-3a18-4bfd-baf6-072632c1f6ea",
                    "path": "<Keyboard>/numpad8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "North",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d42a9fa4-e0b6-46e5-a587-e8e5501db501",
                    "path": "<Keyboard>/numpad9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NorthEast",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07e90118-f3d0-4459-9fdf-c87aaf2fe440",
                    "path": "<Keyboard>/numpad1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SouthWest",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46792e97-e78c-4c7b-b23a-b0082702327e",
                    "path": "<Keyboard>/numpad2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "South",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42ef8bd7-42ab-4b70-a44d-f0a95a806db3",
                    "path": "<Keyboard>/numpad3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SouthEast",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61c4eb5a-b7f5-49fd-a4f4-5ea5f82a3b78",
                    "path": "<Keyboard>/numpad4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "West",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e35625ee-e132-49b5-bba6-cb443c341ba3",
                    "path": "<Keyboard>/numpad5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Wait",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "319d8686-bb27-4e0e-b506-b6198a96f6c1",
                    "path": "<Keyboard>/numpad6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "East",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b1c93445-8152-41e5-a418-38773e608493",
                    "path": "<Keyboard>/numpad7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NorthWest",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3ba4e13-db3a-42d4-87db-0df7e51c4023",
                    "path": "<Keyboard>/numpadMinus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c743eb64-f976-4ddf-a620-a7d5739b51a6",
                    "path": "<Keyboard>/numpadPlus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "030b5652-3c7a-48e7-8aed-a4730b3a1dc3",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Control",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb2b5be3-866f-454b-9d61-67d4aca0d62c",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14333df1-4578-4ada-9fa2-dfec18611041",
                    "path": "<Keyboard>/numpadMultiply",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a506e87d-22b3-447e-aa1a-79e4253f9b03",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Get",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}